--- a/src/app/contact/contact.css
+++ b/src/app/contact/contact.css
@@ -4,4 +4,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 1rem;
+    margin: 4rem;
+    border-color: black;
+    border: 5px solid black;
 }
