--- a/src/app/components/contactForm/contactForm.css
+++ b/src/app/components/contactForm/contactForm.css
@@ -11,7 +11,7 @@
 }
 
 .main-header{
-  font-size: 50px;
+  font-size: 40px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
@@ -59,14 +59,14 @@
   width: 100%;
   margin: 0 auto;
   height: 100%;
-  padding: 20px;
+  padding: 10px;
   background-color: #f5f5f5;
   border-radius: 10px;
 }
 
-.form-group {
+/* .form-group {
   margin-bottom: 20px;
-}
+} */
 
 .form-label {
   display: block;
