--- a/src/app/components/jobTypeSelector/jobCard.css
+++ b/src/app/components/jobTypeSelector/jobCard.css
@@ -1,12 +1,15 @@
 .Nav_of_content{
+    /* position: fixed; */
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     margin: 1rem 0;
+    /* top: 0; */
+    /* z-index:100; */
     width: 100%;
   }
-  
+
   .Nav_of_content_link {
     font-size: 18px;
     color: black;
