--- a/src/app/components/HeroSection/HeroSection.css
+++ b/src/app/components/HeroSection/HeroSection.css
@@ -1,34 +1,35 @@
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../../../public/bg_about.jpg");
+  background-image: url("../../../../public/aboutpage.jpg");
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  background-color: #0074D9;
+  /* background-color: #0074D9; */
 }
 
 .hero-text {
   text-align: center;
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 60%;
   transform: translate(-50%, -50%);
   padding: 2rem;
-  color: white;
-  box-shadow: 0 0 20px rgba(255, 255, 0, 0.4);
+  color: black;
+  /* box-shadow: 0 0 20px rgba(255, 255, 0, 0.4); */
   border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0.5);
+  /* background-color: rgba(0, 0, 0, 0.5); */
   width: 50%;
 }
 
-h1 {
+.hero-heading {
   font-size: 50px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-p {
+.hero-paragraph {
   font-size: 24px;
+  color: black;
 }
 
 
